1.0.3 release

	* handle overlong utf-8 sequences
	* fix link order bug in makefile for python binding
	* fix bug in interest calculation, causing premature disconnects
	* tweak flag_override_resume_data semantics to make more sense (breaks
	  backwards compatibility of edge-cases)
	* improve DHT bootstrapping and periodic refresh
	* improve DHT maintanence performance (by pinging instead of full lookups)
	* fix bug in DHT routing table node-id prefix optimization
	* fix incorrect behavior of flag_use_resume_save_path
	* fix protocol race-condition in super seeding mode
	* support read-only DHT nodes
	* remove unused partial hash DHT lookups
	* remove potentially privacy leaking extension (non-anonymous mode)
	* peer-id connection ordering fix in anonymous mode
	* mingw fixes

1.0.2 release

	* added missing force_proxy to python binding
	* anonymous_mode defaults to false
	* make DHT DOS detection more forgiving to bursts
	* support IPv6 multicast in local service discovery
	* simplify CAS function in DHT put
	* support IPv6 traffic class (via the TOS setting)
	* made uTP re-enter slow-start after time-out
	* fixed uTP upload performance issue
	* fix missing support for DHT put salt

1.0.1 release

	* fix alignment issue in bitfield
	* improved error handling of gzip
	* fixed crash when web seeds redirect
	* fix compiler warnings

1.0 release

	* fix bugs in convert_to/from_native() on windows
	* fix support for web servers not supporting keepalive
	* support storing save_path in resume data
	* don't use full allocation on network drives (on windows)
	* added clear_piece_deadlines() to remove all piece deadlines
	* improve queuing logic of inactive torrents (dont_count_slow_torrents)
	* expose optimistic unchoke logic to plugins
	* fix issue with large UDP packets on windows
	* remove set_ratio() feature
	* improve piece_deadline/streaming
	* honor pieces with priority 7 in sequential download mode
	* simplified building python bindings